[package]
name = "colorize"
version = "1.0.0"
edition = "2021"

documentation = "https://docs.rs/owo-colors"
repository = "https://github.com/RustyYato/colorize"

readme = "README.md"
description = 'A terminal text-coloring library'
keywords = ["cli", "color", "no-std", "terminal", "ansi_term", "owo-colors"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']

std = ['alloc']
alloc = []

strip-colors = []

[dependencies]