[package]
name = "colorz"
version = "1.1.2"
edition = "2021"

documentation = "https://docs.rs/colorz"
repository = "https://github.com/RustyYato/colorz"

readme = "README.md"
description = 'A terminal text-coloring library'
keywords = ["cli", "color", "no-std", "terminal", "ansi_term"]
categories = ["command-line-interface"]
license = 'MIT OR Apache-2.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc"]
rustc-args = ["--cfg", "doc"]

[features]

std = ['alloc']
alloc = []

strip-colors = []

[dependencies.supports-color]
version = '2'
optional = true